--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="todo-app">
-                <h2>TO-DO HUB <img src="images/icon.png"></h2>
+                <h2>TO-DO <img src="images/icon.png"></h2>
                 <div class="row">
                     <input type="text" id="input-box" placeholder="Add your task">
                     <button onclick="addTask()">ADD</button>
